workshop03/bggapp/v2/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggappv2-deployment
  labels:
    name: bggappv2-deployment
    app: bggapp
    tier: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      name: bggappv2-pod
      app: bggapp
      tier: backend
  template:
    metadata:
      name: bggappv2-pod
      labels:
        name: bggappv2-pod
        app: bggapp
        tier: backend
    spec:
      containers:
      - name: bggappv2-container
        image: stackupiss/bgg-backend:v2
        args:
        - --prefix
        - /v2
        imagePullPolicy: IfNotPresent
        ports:
        - name: app-port
          containerPort: 3000
        readinessProbe:
          httpGet:
            path: /v2/healthz
            port: app-port
          timeoutSeconds: 5
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /v2/healthz
            port: app-port
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
